Refactoring Amadeus postavki - preseljeno u application.properties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,2 +1,5 @@
 server.servlet.context-path=/demoAppTest
 logging.level.root=INFO
+
+amadeus.client-id=RuRNwWDrX0F4G3nLKVGDGEZiOPGoIlew
+amadeus.client-secret=jOHSRFlXPsGwDFyz
