Uklonjeni Amadeus security podaci koji su se koristili za potrebe akademije. Za nove ključeve se treba registrirati na Amadues account

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,5 @@
 server.servlet.context-path=/demoAppProd
 logging.level.root=WARN
+
+amadeus.client-id=produkcijski_id
+amadeus.client-secret=produkcijski_secret
