--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.h2.console.enabled=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+amadeus.client-id=defualtni_id
+amadeus.client-secret=defaultni_secret
